2011-03-22  TOMITA Masahiro  <tommy@tmtm.org>

	* faster

2011-03-21  TOMITA Masahiro  <tommy@tmtm.org>

	* 0.3
	* add MmapScanner#matched(n)
	* FIX: memory leak.

2011-03-03  TOMITA Masahiro  <tommy@tmtm.org>

	* add MmapScanner#scan_until(), #matched()
	* FIX: MmapScanner.new with empty string raises RangeError.

2011-03-02  TOMITA Masahiro  <tommy@tmtm.org>

	* 0.2

2011-03-01  TOMITA Masahiro  <tommy@tmtm.org>

	* MmmapScanner.new accept String.

2011-02-05  TOMITA Masahiro  <tommy@tmtm.org>

	* 0.1