@@ -1,3 +1,7 @@
+2011-03-23  TOMITA Masahiro  <tommy@tmtm.org>
+
+	* add MmapScanner#matched_str
+
 2011-03-22  TOMITA Masahiro  <tommy@tmtm.org>
 
 	* faster
